--- a/index.html
+++ b/index.html
@@ -22,12 +22,27 @@
   <link rel="stylesheet" href="css/styles.css">
 
 
-<img src="https://cdn.askthelawyers.com/uploads/ui/ask-the-lawyers_2.png" alt="ATL Logo"> <a href="/index.html">Header Link 1</a> <a href="/index.html">Header Link 2</a> <a href="/index.html">Header Link 3</a>
+
 
 </head>
 
 <body>
- <h1>This website is awesome</h1>
+
+<div>
+    
+    
+    <div class="Logo"><img src="https://cdn.askthelawyers.com/uploads/ui/ask-the-lawyers_2.png" alt="ATL Logo"></div>  
+    <div class="Links"><a href="/index.html">Header Link 1</a> <a href="/index.html">Header Link 2</a> <a href="/index.html">Header Link 3</a></div>
+
+
+
+
+
+</div> 
+
+
+ 
+    <h1>This website is awesome</h1>
 
  This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast. <button>Sign Up</button> <img src="https://images.freeimages.com/images/large-previews/583/friends-friendship-boy-jump-jumping-sidewalk-person-portraid-play-playing-bodies-walk-walking-back-boys-man-men-studients-joking-1437561.jpg" alt="Jumping">
 
