Figured out how to get text underneath the images of the superhero heads.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 
 
 
-
 <div class="header">
     <div class="Logo"><img src="https://cdn.askthelawyers.com/uploads/ui/ask-the-lawyers_2.png" alt="ATL Logo"></div>  
     <div class="LinksWrap"><div class="Links"><a href="/index.html">Header Link 1</a> <a href="/index.html">Header Link 2</a> <a href="/index.html">Header Link 3</a></div></div>
@@ -39,8 +38,8 @@
 
 <div class="ThisWebsiteIsAwesome">
     
-  <div class="Text"><h2>This website is awesome</h2>
-  This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+  <div class="Text"><h2>Legal Advice from Your Favorite Heroes</h2>
+  Have a legal problem? Need a superhero? We've got you covered. Our attorney-heroes are experts in their fields. <p>No money? No problem. The only pay our heroes need is the satisfaction of a job well done.</p>
   <p><button>Sign Up</button> </p>
   </div>
   
@@ -51,16 +50,19 @@
 
 <div class="SomeRandomInformation">
  <h2>Some random information.</h2>
-</div>
 
+</div>
 
 <div class="FourAlignedPics">
     
- <div><img src=”/home/ronnie-coding/landing-page/avatar1.png”>This is some subtext under an illustration of an image.</div>  
- <div><img src=”https://icons.iconarchive.com/icons/hopstarter/bioman/128/Bioman-Avatar-2-Green-icon.png”>This is some subtext under an illustration of an image.</div> 
- <div><img src=”https://icons.iconarchive.com/icons/hopstarter/bioman/128/Bioman-Avatar-6-Peebo-icon.png”>This is some subtext under an illustration of an image.</div> 
- <div><img src=”https://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/128/Emotes-face-angel-icon.png”>This is some subtext under an illustration of an image.</div>
-
+ <div class="HeroFace"><img src="avatar1.png" alt="Avatar 1"> 
+ <p>Captain America</p></div>
+ <div class="HeroFace"><img src="avatar2.png" alt="Avatar 2"> 
+ <p>Nick Fury</p></div>
+ <div class="HeroFace"><img src="avatar3.png" alt="Avatar 3"> 
+ <p>Iron Man</p></div>
+ <div class="HeroFace"><img src="avatar4.png" alt="Avatar 4"> 
+ <p>Loki</p></div>
 </div>
 
 
