Final alignment of hero faces. Added color to inspiring quote section, and fleshed out content.

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
 <div class="header">
     <div class="Logo"><img src="https://cdn.askthelawyers.com/uploads/ui/ask-the-lawyers_2.png" alt="ATL Logo"></div>  
-    <div class="LinksWrap"><div class="Links"><a href="/index.html">Header Link 1</a> <a href="/index.html">Header Link 2</a> <a href="/index.html">Header Link 3</a></div></div>
+    <div class="LinksWrap"><div class="Links"><a href="/index.html">Our Services</a> <a href="/index.html">Individual Practices</a> <a href="/index. html">Superhero Battle Insurance</a></div></div>
 </div> 
 
 <div class="ThisWebsiteIsAwesome">
     
   <div class="Text"><h2>Legal Advice from Your Favorite Heroes</h2>
-  Have a legal problem? Need a superhero? We've got you covered. Our attorney-heroes are experts in their fields. <p>No money? No problem. The only pay our heroes need is the satisfaction of a job well done.</p>
+  Have a legal problem? Need a superhero? We've got you covered. <br>Our attorney-heroes are experts in their fields. <p>No money? No problem. The only pay our heroes need is the satisfaction of a job well done.</p>
   <p><button>Sign Up</button> </p>
   </div>
   
@@ -49,7 +49,7 @@
 
 
 <div class="SomeRandomInformation">
- <h2>Some random information.</h2>
+ <h2>Meet Our Attorney-Heroes</h2>
 
 </div>
 
