--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="A simple HTML5 Template for new projects.">
   <meta name="author" content="SitePoint">
 
-  <meta property="og:title" content="A Basic HTML5 Template">
+  <meta property="og:title" content="The Avengers of Law">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
   <meta property="og:description" content="A simple HTML5 Template for new projects.">
@@ -72,12 +72,12 @@
 
 <div class="InspiringQuote">
 
- This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. ~ Thor, God of Thunder
+<p><i>"With great power, comes great responsibility."</i> ~ Uncle Ben</p>
 
 </div>
 
 <div class="CallToAction">
- Call to Action! It's Time! Sign up for our product by clicking that button right over there!  <button>Sign up </button>
+ <p class="ActionButton">Call to Action! It's Time! Sign up for our product by clicking that button right over there!  <button>Sign up </button></p>
 
 
 </div>
